update frond end coding.

--- a/income/piggy_bank/static/login/login.html
+++ b/income/piggy_bank/static/login/login.html
@@ -57,7 +57,7 @@
         
         <script type="text/javascript">
           if(navigator.appVersion.match(/MSIE [678]./i)==null){
-            document.writeln('<link type="text/css" href="/static/login/styles.css" rel="stylesheet">')
+            document.writeln('<link type="text/css" href="/static/login/sites/wafkzg_draft/styles.css" rel="stylesheet">')
           }
         </script><link type="text/css" href="/static/login/styles.css" rel="stylesheet">
 
@@ -86,64 +86,47 @@
 
 </head>
 
-<body class="S_cbauOwuG">
-<div class="container-fluid cst_sectionBlock cst_BGtransparent c-section S_cbsect_d0d5ce59 c-scrollIn" data-c_tl_id="M_f588cb2b52061a798c8f86bae69783f2" id="section_b5e1e367124b9cca"><div class="cst_sectionBGwrap c-div S_cbdiv_4854bb95"><div class="cst_sectionBG c-div S_cbdiv_6d784b9c" src="http://qty83k.creatby.com/materials/origin/2d0ba96b2070c9edf9b7de9b7c452e48_origin.jpg" style="background-image: url(&#39;http://qty83k.creatby.com/materials/origin/2d0ba96b2070c9edf9b7de9b7c452e48_origin.jpg&#39;); ">
-    <div class="cst_overlay c-div S_cbdiv_ff113356">
-    </div>
-</div>
-</div>
-    <div class="container c-container S_cbcont_862853f5">
-        <div class="cst_titleDivider c-div S_cbdiv_452d9e59">
-            <hr class="cst_leftspliteline S_cb_oth_7c641e7b">
-            <div class="cst_textWrap c-div S_cbdiv_be705b7a">
-                <h4 class="cst_title c-heading youziku-e094346a5670469eaacd0dcc3afa6f0d S_cbhead_4ff604a0" accesskey="e094346a5670469eaacd0dcc3afa6f0d" style="font-family: Source-Han-Light;">登录</h4>
-                <h5 class="cst_subtitle c-heading S_cbhead_fea575ef">家庭收入管理平台</h5>
-            </div>
-            <hr class="cst_rightspliteline S_cb_oth_ae4b1b46">
-        </div>
-        <div class="c-div S_cbdiv_5466dcf5">
-        {% if next is None %}
-        <form method="post", action="/login/">
-        {% else %}
-        <form method="post", action="/login/?next={{next}}">
-        {% endif %}
-        <div class="row pro_input_DP c-row S_cbrow_a9e192a4">
-            <div align="center">
-                <div class="S_cbdiv_0306e3dd">
-                    {% csrf_token %}
-                    <input class="pro_input c-input S_cbsubm_418eec22" placeholder="用户名" required="True" type="text" name="username"  style="width:235px;height:28px;">
-                </div>
-                <div class="S_cbdiv_0306e3dd">
-                    <input class="pro_input c-input S_cbsubm_418eec22" placeholder="密码" required="True" type="password" name="password"  style="width:235px;height:28px;">
-                </div>
-                <div class="c-div S_cbdiv_0306e3dd">
-                    <button class="btn pro_submit S_cbsubm_418eec22" name="" type="submit" wait="" style="width:235px;height:28px;">登录</button>
-                </div>
-        </form>
-        </form>
-            <div class="c-div"></div>
-            <div class="c-div"></div>
-            <div class="c-div"></div>
-        </div>
-    </div>
-    </div>
-    </form>
-    </div>
-    </div>
-</div>
+<body class="S_cbauOwuG"><div class="container-fluid cst_sectionBlock cst_BGtransparent c-section S_cbsect_d0d5ce59 c-scrollIn" data-c_tl_id="M_f588cb2b52061a798c8f86bae69783f2" id="section_b5e1e367124b9cca"><div class="cst_sectionBGwrap c-div S_cbdiv_4854bb95"><div class="cst_sectionBG c-div S_cbdiv_6d784b9c" src="http://qty83k.creatby.com/materials/origin/2d0ba96b2070c9edf9b7de9b7c452e48_origin.jpg" style="background-image: url(&#39;http://qty83k.creatby.com/materials/origin/2d0ba96b2070c9edf9b7de9b7c452e48_origin.jpg&#39;); "><div class="cst_overlay c-div S_cbdiv_ff113356"></div></div></div><div class="container c-container S_cbcont_862853f5"><div class="cst_titleDivider c-div S_cbdiv_452d9e59"><hr class="cst_leftspliteline S_cb_oth_7c641e7b"><div class="cst_textWrap c-div S_cbdiv_be705b7a"><h4 class="cst_title c-heading youziku-e094346a5670469eaacd0dcc3afa6f0d S_cbhead_4ff604a0" accesskey="e094346a5670469eaacd0dcc3afa6f0d" style="font-family: Source-Han-Light;">登录</h4><h5 class="cst_subtitle c-heading S_cbhead_fea575ef">家庭收入管理平台</h5></div><hr class="cst_rightspliteline S_cb_oth_ae4b1b46"></div><div class="c-div S_cbdiv_5466dcf5"><form class="c-form S_cbform_4122817c" data-action="/form/5vxrtv/?format=json" data-c_form="true"><div class="row pro_input_DP c-row S_cbrow_a9e192a4"><div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 c-column cs-repeatable S_cbcolu_74297406"><div class="c-div S_cbdiv_18f6076b"><input class="pro_input c-input S_cbinpu_af0508df" placeholder="姓名" required="True" type="number"></div></div><div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 c-column cs-repeatable S_cbcolu_9d004237"><div class="c-div S_cbdiv_6fb56566"><input class="pro_input c-input S_cbinpu_70c737ae" placeholder="年龄" required="True" type="text"></div><div class="c-div S_cbdiv_0d4f365d"><input class="pro_input c-input S_cbinpu_14c95223" placeholder="年龄" required="True" type="text"></div></div><div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 c-column cs-repeatable S_cbcolu_54c7916f"><div class="c-div S_cbdiv_25061684"><input class="pro_input c-input S_cbinpu_f395d099" name="c1" placeholder="电话" required="True" type="number"></div></div></div><div class="c-div S_cbdiv_0306e3dd"><button class="btn pro_submit S_cbsubm_418eec22" name="" type="submit" wait="">登录</button></div><h3 class="c-successmessage S_cberro_eed64be7">谢谢，表单已提交成功！</h3><h4 class="c-errormessage S_cberro_f0cd3afc">请完整填写表单的信息后，再进行提交！</h4></form></div></div></div>
 
 
 <div class="container-fluid c-section c-scrollIn c-powered" style="text-align: center; min-height: 0px; background-color: rgba(0,0,0,1);">
+  <p class="paragraph_fhjsja" style="width: auto; float: none; display: inline-block; margin-bottom: 2px; font-size: 12px; color: #707070;">
+   Powered by
+  </p>
+  <a class="c-textlink" href="http://www.coolsite360.com/" style="font-size: 12px; color: #707070; " title="响应式网页自助建站" target="_blank">
+   Coolsite360
+  </a>
 </div>
 
 
 
 <script src="/static/login/youziku.justtime.js.下载"></script>
-<script type="text/javascript" src="/static/login/stats" charset="UTF-8"></script>
+<script type="text/javascript" src="./stats" charset="UTF-8"></script>
 
                 <script type="text/javascript" src="/static/login/login_data.js.下载"></script>
                 <script>var page_slug = 'login'; </script>
+            
 
+
+<!---                          weixin initial                   -->
+  <script type="text/javascript">
+  var portal_url = '/static/login/sites/wafkzg_draft/';
+  var cdnPath = '//o3bnyc.creatby.com/diazo/c-built/player/';
+  var request_server = new window.XMLHttpRequest();
+  var request_url = portal_url + "config.js?url=" + encodeURIComponent(window.location.origin + window.location.pathname + window.location.search);
+  request_server.onreadystatechange=function(){
+      if(request_server.readyState != 4 || request_server.status != 200) return;
+      var b = request_server.responseText;
+      eval(b);
+      weixin_config_ready = 1;
+      if(typeof load_wx != 'undefined' && weixin_initial == 0 ){
+          load_wx();
+      }
+  };
+  request_server.open('GET', request_url, true);
+  request_server.send(null);
+  </script>
+  <script src="/static/login/jweixin-1.1.0.js.下载"></script>
 
 
 
@@ -238,12 +221,12 @@ var message_hash = window.location.hash;
 var interaction_view = {};
 interaction_view['weixin'] = {'eventStatistic':function(s){}}
 </script>
-<script type="text/javascript" src="/static/login/weixin.js.下载"></script>
+<script type="text/javascript" src="./weixin.js.下载"></script>
 
 
 <!-- 统计代码-->
 
-    <script type="text/javascript" src="/static/login/stats" charset="UTF-8"></script>
+    <script type="text/javascript" src="./stats" charset="UTF-8"></script>
 
 
 
