--- a/income/piggy_bank/static/plot.html
+++ b/income/piggy_bank/static/plot.html
@@ -7,11 +7,11 @@
 
 </head>
 <body>
-    <div id="ae10defc0dbb4204896eed6fb3d63ff0" style="width:900px; height:500px;"></div>
+    <div id="db0acdbc3fa04ab8933b8630d347e6d1" style="width:900px; height:500px;"></div>
     <script>
-        var chart_ae10defc0dbb4204896eed6fb3d63ff0 = echarts.init(
-            document.getElementById('ae10defc0dbb4204896eed6fb3d63ff0'), 'white', {renderer: 'canvas'});
-        var option_ae10defc0dbb4204896eed6fb3d63ff0 = {
+        var chart_db0acdbc3fa04ab8933b8630d347e6d1 = echarts.init(
+            document.getElementById('db0acdbc3fa04ab8933b8630d347e6d1'), 'white', {renderer: 'canvas'});
+        var option_db0acdbc3fa04ab8933b8630d347e6d1 = {
     "color": [
         "#c23531",
         "#2f4554",
@@ -40,45 +40,149 @@
     ],
     "series": [
         {
-            "type": "line",
-            "name": "\u6bcf\u6708\u5b9e\u9645\u5b58\u6b3e",
-            "symbolSize": 4,
-            "showSymbol": true,
-            "smooth": false,
-            "step": false,
+            "type": "bar",
+            "name": "\u6bcf\u6708\u5b9e\u9645\u6536\u5165",
             "data": [
-                [
-                    "2019\u5e744\u6708",
-                    142633.0
-                ],
-                [
-                    "2019\u5e745\u6708",
-                    53313.61
-                ]
+                9492.36,
+                339092.45,
+                9120.22,
+                9116.86,
+                9123.47,
+                9118.95,
+                9115.86,
+                8953.45,
+                9144.36,
+                9265.7,
+                9399.91,
+                339000.0,
+                9027.77,
+                9024.41,
+                9031.02,
+                9026.5,
+                9023.41,
+                8861.0,
+                9051.91,
+                9173.25,
+                10097.24,
+                339697.33,
+                9725.1,
+                9721.74,
+                9728.35,
+                9723.83,
+                9720.74,
+                9558.33,
+                9749.24,
+                9870.58,
+                12474.16,
+                342074.25,
+                12102.02,
+                12098.66,
+                12105.27,
+                12100.75,
+                12097.66,
+                11935.25,
+                12126.16,
+                12247.5,
+                12474.16,
+                342074.25,
+                12102.02,
+                12098.66,
+                12105.27,
+                12100.75,
+                12097.66,
+                11935.25,
+                12126.16,
+                12247.5,
+                12408.16,
+                342008.25,
+                12036.02,
+                12032.66,
+                12039.27,
+                12034.75,
+                12031.66,
+                11869.25,
+                12060.16,
+                12181.5,
+                12408.16,
+                342008.25,
+                12036.02,
+                12032.66,
+                12039.27,
+                12034.75,
+                12031.66,
+                11869.25,
+                12060.16,
+                12181.5,
+                12408.16,
+                342008.25,
+                12036.02,
+                12032.66,
+                12039.27,
+                12034.75,
+                12031.66,
+                11869.25,
+                12060.16,
+                12181.5,
+                12063.57,
+                341663.66,
+                11691.43,
+                11688.07,
+                11694.68,
+                11690.16,
+                11687.07,
+                11524.66,
+                11715.57,
+                11836.91,
+                36370.09,
+                365970.18,
+                35997.95,
+                35994.59,
+                36001.2,
+                35996.68,
+                35993.59,
+                35831.18,
+                36022.09,
+                36143.43
             ],
+            "barCategoryGap": "20%",
             "label": {
                 "show": true,
                 "position": "top",
                 "fontSize": 12
             },
-            "lineStyle": {
-                "width": 1,
-                "opacity": 1,
-                "curveness": 0,
-                "type": "solid"
+            "markLine": {
+                "silent": false,
+                "precision": 2,
+                "label": {
+                    "show": true,
+                    "position": "top",
+                    "fontSize": 12
+                },
+                "data": [
+                    {
+                        "name": "mean_Value",
+                        "yAxis": 46621.60499999999
+                    }
+                ]
             },
-            "areaStyle": {
-                "opacity": 0
+            "itemStyle": {
+                "color": "#33cc33"
+            },
+            "rippleEffect": {
+                "show": true,
+                "brushType": "stroke",
+                "scale": 2.5,
+                "period": 4
             }
         }
     ],
     "legend": [
         {
             "data": [
-                "\u6bcf\u6708\u5b9e\u9645\u5b58\u6b3e"
+                "\u6bcf\u6708\u5b9e\u9645\u6536\u5165"
             ],
             "selected": {
-                "\u6bcf\u6708\u5b9e\u9645\u5b58\u6b3e": true
+                "\u6bcf\u6708\u5b9e\u9645\u6536\u5165": true
             },
             "show": true
         }
@@ -124,7 +228,7 @@
             "axisLabel": {
                 "show": true,
                 "position": "top",
-                "rotate": "60",
+                "rotate": "45",
                 "fontSize": 12
             },
             "inverse": false,
@@ -139,13 +243,21 @@
             },
             "data": [
                 "2019\u5e744\u6708",
-                "2019\u5e745\u6708"
+                "2019\u5e745\u6708",
+                "2019\u5e746\u6708",
+                "2019\u5e747\u6708",
+                "2019\u5e748\u6708",
+                "2019\u5e749\u6708",
+                "2019\u5e7410\u6708",
+                "2019\u5e7411\u6708",
+                "2019\u5e7412\u6708",
+                "2020\u5e741\u6708"
             ]
         }
     ],
     "title": [
         {
-            "text": "\u50a8\u84c4-\u6298\u7ebf\u56fe",
+            "text": "\u6536\u5165-\u67f1\u5f62\u56fe",
             "subtext": "All"
         }
     ],
@@ -180,7 +292,7 @@
         }
     }
 };
-        chart_ae10defc0dbb4204896eed6fb3d63ff0.setOption(option_ae10defc0dbb4204896eed6fb3d63ff0);
+        chart_db0acdbc3fa04ab8933b8630d347e6d1.setOption(option_db0acdbc3fa04ab8933b8630d347e6d1);
     </script>
 </body>
 </html>
