--- a/income/piggy_bank/static/word_cloud.html
+++ b/income/piggy_bank/static/word_cloud.html
@@ -8,11 +8,11 @@
 
 </head>
 <body>
-    <div id="d1f4ed91d3f8478793eebf2b93287e4e" style="width:900px; height:300px;"></div>
+    <div id="6074e094f3b349bdabccfbfef2423ab4" style="width:900px; height:300px;"></div>
     <script>
-        var chart_d1f4ed91d3f8478793eebf2b93287e4e = echarts.init(
-            document.getElementById('d1f4ed91d3f8478793eebf2b93287e4e'), 'white', {renderer: 'svg'});
-        var option_d1f4ed91d3f8478793eebf2b93287e4e = {
+        var chart_6074e094f3b349bdabccfbfef2423ab4 = echarts.init(
+            document.getElementById('6074e094f3b349bdabccfbfef2423ab4'), 'white', {renderer: 'svg'});
+        var option_6074e094f3b349bdabccfbfef2423ab4 = {
     "color": [
         "#c23531",
         "#2f4554",
@@ -60,7 +60,7 @@
                     "value": 90000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(24,115,8)"
+                            "color": "rgb(33,123,146)"
                         }
                     }
                 },
@@ -69,7 +69,7 @@
                     "value": 20000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(31,143,102)"
+                            "color": "rgb(73,156,21)"
                         }
                     }
                 },
@@ -78,7 +78,7 @@
                     "value": 30000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(101,105,107)"
+                            "color": "rgb(142,35,51)"
                         }
                     }
                 },
@@ -87,7 +87,7 @@
                     "value": 10000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(74,156,23)"
+                            "color": "rgb(112,124,90)"
                         }
                     }
                 },
@@ -96,7 +96,7 @@
                     "value": 10000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(80,95,43)"
+                            "color": "rgb(76,26,77)"
                         }
                     }
                 },
@@ -105,7 +105,7 @@
                     "value": 20000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(15,97,47)"
+                            "color": "rgb(154,57,89)"
                         }
                     }
                 },
@@ -114,7 +114,7 @@
                     "value": 20000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(119,114,9)"
+                            "color": "rgb(158,138,137)"
                         }
                     }
                 },
@@ -123,7 +123,7 @@
                     "value": 10000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(52,5,110)"
+                            "color": "rgb(135,46,139)"
                         }
                     }
                 },
@@ -132,7 +132,7 @@
                     "value": 142633.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(104,49,92)"
+                            "color": "rgb(56,66,83)"
                         }
                     }
                 },
@@ -141,7 +141,79 @@
                     "value": 53313.61,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(111,140,155)"
+                            "color": "rgb(64,60,70)"
+                        }
+                    }
+                },
+                {
+                    "name": "2019\u5e746\u6708",
+                    "value": 45935.92,
+                    "textStyle": {
+                        "normal": {
+                            "color": "rgb(135,63,101)"
+                        }
+                    }
+                },
+                {
+                    "name": "2019\u5e747\u6708",
+                    "value": 30497.3,
+                    "textStyle": {
+                        "normal": {
+                            "color": "rgb(20,116,49)"
+                        }
+                    }
+                },
+                {
+                    "name": "2019\u5e748\u6708",
+                    "value": 34564.56,
+                    "textStyle": {
+                        "normal": {
+                            "color": "rgb(118,41,79)"
+                        }
+                    }
+                },
+                {
+                    "name": "2019\u5e749\u6708",
+                    "value": 26712.43,
+                    "textStyle": {
+                        "normal": {
+                            "color": "rgb(50,138,112)"
+                        }
+                    }
+                },
+                {
+                    "name": "2019\u5e7410\u6708",
+                    "value": 30958.5,
+                    "textStyle": {
+                        "normal": {
+                            "color": "rgb(40,145,74)"
+                        }
+                    }
+                },
+                {
+                    "name": "2019\u5e7411\u6708",
+                    "value": 14284.75,
+                    "textStyle": {
+                        "normal": {
+                            "color": "rgb(151,100,51)"
+                        }
+                    }
+                },
+                {
+                    "name": "2019\u5e7412\u6708",
+                    "value": 16592.15,
+                    "textStyle": {
+                        "normal": {
+                            "color": "rgb(118,143,84)"
+                        }
+                    }
+                },
+                {
+                    "name": "2020\u5e741\u6708",
+                    "value": 22898.25,
+                    "textStyle": {
+                        "normal": {
+                            "color": "rgb(75,27,47)"
                         }
                     }
                 },
@@ -150,7 +222,7 @@
                     "value": 90000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(72,10,30)"
+                            "color": "rgb(46,2,135)"
                         }
                     }
                 },
@@ -159,7 +231,7 @@
                     "value": 20000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(88,72,61)"
+                            "color": "rgb(111,37,34)"
                         }
                     }
                 },
@@ -168,7 +240,7 @@
                     "value": 30000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(127,110,46)"
+                            "color": "rgb(13,66,4)"
                         }
                     }
                 },
@@ -177,7 +249,7 @@
                     "value": 10000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(81,7,31)"
+                            "color": "rgb(98,131,8)"
                         }
                     }
                 },
@@ -186,7 +258,7 @@
                     "value": 10000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(107,100,47)"
+                            "color": "rgb(147,37,36)"
                         }
                     }
                 },
@@ -195,7 +267,7 @@
                     "value": 20000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(148,50,125)"
+                            "color": "rgb(26,86,129)"
                         }
                     }
                 },
@@ -204,7 +276,7 @@
                     "value": 20000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(22,50,60)"
+                            "color": "rgb(114,62,6)"
                         }
                     }
                 },
@@ -213,7 +285,7 @@
                     "value": 10000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(31,132,86)"
+                            "color": "rgb(36,68,145)"
                         }
                     }
                 },
@@ -222,7 +294,7 @@
                     "value": 142633.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(130,33,19)"
+                            "color": "rgb(79,158,129)"
                         }
                     }
                 },
@@ -231,7 +303,79 @@
                     "value": 53313.61,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(15,53,84)"
+                            "color": "rgb(81,135,160)"
+                        }
+                    }
+                },
+                {
+                    "name": "2019\u5e746\u6708",
+                    "value": 45935.92,
+                    "textStyle": {
+                        "normal": {
+                            "color": "rgb(142,5,141)"
+                        }
+                    }
+                },
+                {
+                    "name": "2019\u5e747\u6708",
+                    "value": 30497.3,
+                    "textStyle": {
+                        "normal": {
+                            "color": "rgb(106,71,132)"
+                        }
+                    }
+                },
+                {
+                    "name": "2019\u5e748\u6708",
+                    "value": 34564.56,
+                    "textStyle": {
+                        "normal": {
+                            "color": "rgb(25,52,130)"
+                        }
+                    }
+                },
+                {
+                    "name": "2019\u5e749\u6708",
+                    "value": 26712.43,
+                    "textStyle": {
+                        "normal": {
+                            "color": "rgb(9,31,130)"
+                        }
+                    }
+                },
+                {
+                    "name": "2019\u5e7410\u6708",
+                    "value": 30958.5,
+                    "textStyle": {
+                        "normal": {
+                            "color": "rgb(2,96,69)"
+                        }
+                    }
+                },
+                {
+                    "name": "2019\u5e7411\u6708",
+                    "value": 14284.75,
+                    "textStyle": {
+                        "normal": {
+                            "color": "rgb(74,72,3)"
+                        }
+                    }
+                },
+                {
+                    "name": "2019\u5e7412\u6708",
+                    "value": 16592.15,
+                    "textStyle": {
+                        "normal": {
+                            "color": "rgb(132,72,3)"
+                        }
+                    }
+                },
+                {
+                    "name": "2020\u5e741\u6708",
+                    "value": 22898.25,
+                    "textStyle": {
+                        "normal": {
+                            "color": "rgb(40,78,29)"
                         }
                     }
                 }
@@ -257,7 +401,7 @@
         "borderWidth": 0
     }
 };
-        chart_d1f4ed91d3f8478793eebf2b93287e4e.setOption(option_d1f4ed91d3f8478793eebf2b93287e4e);
+        chart_6074e094f3b349bdabccfbfef2423ab4.setOption(option_6074e094f3b349bdabccfbfef2423ab4);
     </script>
 </body>
 </html>
