--- a/income/piggy_bank/static/plot.html
+++ b/income/piggy_bank/static/plot.html
@@ -7,11 +7,11 @@
 
 </head>
 <body>
-    <div id="db0acdbc3fa04ab8933b8630d347e6d1" style="width:900px; height:500px;"></div>
+    <div id="2d77b9a3e3e14d4584c5139f9c4d2f6f" style="width:900px; height:500px;"></div>
     <script>
-        var chart_db0acdbc3fa04ab8933b8630d347e6d1 = echarts.init(
-            document.getElementById('db0acdbc3fa04ab8933b8630d347e6d1'), 'white', {renderer: 'canvas'});
-        var option_db0acdbc3fa04ab8933b8630d347e6d1 = {
+        var chart_2d77b9a3e3e14d4584c5139f9c4d2f6f = echarts.init(
+            document.getElementById('2d77b9a3e3e14d4584c5139f9c4d2f6f'), 'white', {renderer: 'canvas'});
+        var option_2d77b9a3e3e14d4584c5139f9c4d2f6f = {
     "color": [
         "#c23531",
         "#2f4554",
@@ -41,108 +41,18 @@
     "series": [
         {
             "type": "bar",
-            "name": "\u6bcf\u6708\u5b9e\u9645\u6536\u5165",
+            "name": "\u6bcf\u6708\u5b9e\u9645\u652f\u51fa",
             "data": [
-                9492.36,
-                339092.45,
-                9120.22,
-                9116.86,
-                9123.47,
-                9118.95,
-                9115.86,
-                8953.45,
-                9144.36,
-                9265.7,
-                9399.91,
-                339000.0,
-                9027.77,
-                9024.41,
-                9031.02,
-                9026.5,
-                9023.41,
-                8861.0,
-                9051.91,
-                9173.25,
-                10097.24,
-                339697.33,
-                9725.1,
-                9721.74,
-                9728.35,
-                9723.83,
-                9720.74,
-                9558.33,
-                9749.24,
-                9870.58,
-                12474.16,
-                342074.25,
-                12102.02,
-                12098.66,
-                12105.27,
-                12100.75,
-                12097.66,
-                11935.25,
-                12126.16,
-                12247.5,
-                12474.16,
-                342074.25,
-                12102.02,
-                12098.66,
-                12105.27,
-                12100.75,
-                12097.66,
-                11935.25,
-                12126.16,
-                12247.5,
-                12408.16,
-                342008.25,
-                12036.02,
-                12032.66,
-                12039.27,
-                12034.75,
-                12031.66,
-                11869.25,
-                12060.16,
-                12181.5,
-                12408.16,
-                342008.25,
-                12036.02,
-                12032.66,
-                12039.27,
-                12034.75,
-                12031.66,
-                11869.25,
-                12060.16,
-                12181.5,
-                12408.16,
-                342008.25,
-                12036.02,
-                12032.66,
-                12039.27,
-                12034.75,
-                12031.66,
-                11869.25,
-                12060.16,
-                12181.5,
-                12063.57,
-                341663.66,
-                11691.43,
-                11688.07,
-                11694.68,
-                11690.16,
-                11687.07,
-                11524.66,
-                11715.57,
-                11836.91,
-                36370.09,
-                365970.18,
-                35997.95,
-                35994.59,
-                36001.2,
-                35996.68,
-                35993.59,
-                35831.18,
-                36022.09,
-                36143.43
+                1927.74,
+                429904.93,
+                5958.39,
+                7537.28,
+                7394.48,
+                8232.42,
+                7853.8,
+                8512.7,
+                8700.81,
+                10340.67
             ],
             "barCategoryGap": "20%",
             "label": {
@@ -161,13 +71,11 @@
                 "data": [
                     {
                         "name": "mean_Value",
-                        "yAxis": 46621.60499999999
+                        "yAxis": 49636.322
                     }
                 ]
             },
-            "itemStyle": {
-                "color": "#33cc33"
-            },
+            "itemStyle": {},
             "rippleEffect": {
                 "show": true,
                 "brushType": "stroke",
@@ -179,10 +87,10 @@
     "legend": [
         {
             "data": [
-                "\u6bcf\u6708\u5b9e\u9645\u6536\u5165"
+                "\u6bcf\u6708\u5b9e\u9645\u652f\u51fa"
             ],
             "selected": {
-                "\u6bcf\u6708\u5b9e\u9645\u6536\u5165": true
+                "\u6bcf\u6708\u5b9e\u9645\u652f\u51fa": true
             },
             "show": true
         }
@@ -257,7 +165,7 @@
     ],
     "title": [
         {
-            "text": "\u6536\u5165-\u67f1\u5f62\u56fe",
+            "text": "\u652f\u51fa-\u67f1\u5f62\u56fe",
             "subtext": "All"
         }
     ],
@@ -292,7 +200,7 @@
         }
     }
 };
-        chart_db0acdbc3fa04ab8933b8630d347e6d1.setOption(option_db0acdbc3fa04ab8933b8630d347e6d1);
+        chart_2d77b9a3e3e14d4584c5139f9c4d2f6f.setOption(option_2d77b9a3e3e14d4584c5139f9c4d2f6f);
     </script>
 </body>
 </html>
